fix navbar not showing problem

--- a/app/assets/stylesheets/animate.css
+++ b/app/assets/stylesheets/animate.css
@@ -1,3 +1,7 @@
+.fadein {
+    animation: fadein 1s;
+}
+
 /* when hiding the picture */
 .ng-hide-add         { animation:0.5s lightSpeedOut ease; }
 
